2005-12-16  Nathan Sidwell  <nathan@codesourcery.com>

	Second part of ms1 to mt renaming.
	* Makefile.am: Adjust.
	* Makefile.in: Rebuilt.
	* aclocal.m4: Rebuilt.
	* configrun-sid.in: Adjust.

2005-06-24  Dave Brolley  <brolley@redhat.com>

	* configrun-sid.in: Add ms1 support.
	* Makefile.am: Likewise.

2005-06-03  Jim Blandy  <jimb@redhat.com>

	* Makefile.in, aclocal.m4: Regenerated with Automake 1.9.5.
	* configure: Regenerated with autoconf 2.59.

2003-10-24  Dave Brolley  <brolley@redhat.com>

	* configure.in: Set program_transform_name to s,x,x, to avoid
	installing with the target prefix.
	* configure: Regenerate.

2003-10-07  Dave Brolley  <brolley@redhat.com>

	For Graydon Hoare  <graydon@redhat.com>
	* configrun-sid.in: Add --tksched option for scheduler control panel.

2001-12-27  Frank Ch. Eigler  <fche@redhat.com>

	* configrun-sid.in: Make cpu<->sched pin connections for time queries.

2001-12-04  Frank Ch. Eigler  <fche@redhat.com>

	* configrun-sid.in (opt_EB, opt_EL): Delay error checking until
	after $opt_board processing.

2001-11-08  Frank Ch. Eigler  <fche@redhat.com>

	* configrun-sid.in (gprof): Connect call-graph pins.

2001-10-29  Frank Ch. Eigler  <fche@redhat.com>
	
	* configrun-sid.in (memory-region): Create component in first section.

2001-10-29  Frank Ch. Eigler  <fche@redhat.com>

	* configrun-sid.in (gdb): Support no-gloss case generally.

2001-10-26  Frank Ch. Eigler  <fche@redhat.com>

	* configrun-sid.in: Correct cache-flush-net -> i/dcache connections.

2001-10-26  Frank Ch. Eigler  <fche@redhat.com>

	* configrun-sid.in: Add "--version" option.  Add "bus=MAPPER"
	memory-region option.  Avoid needless subprocess calls for
	config file stamping.  Add cache-flush net between gdb and
	all external caches.

2001-10-17  Dave Brolley  <brolley@redhat.com>

	* configrun-sid.in: Move check of $opt_persistent and $opt_verbose to
	just before output.
	Check for gdb components attached to processors other than the main